# Pac-Man

./: CMakeLists.txt  makefile
my_animation_project/: Makefile  test_ftxui  test_ftxui.cpp
my_animation_project/src/: main.cpp
src/: canvas_animated.cpp  prueba.cpp
